fix spacing futher in signup component

--- a/src/scss/_login.scss
+++ b/src/scss/_login.scss
@@ -6,8 +6,6 @@
 }
 
 .loginContainer{
-  // border-style: solid;
-  // border-color: black;
   margin-top: 10%;
   width: 30%;
   margin-left: 35%;
@@ -17,4 +15,8 @@
 
 .inputContainer{
   margin: 2%;
+}
+
+.buttonContainer{
+  border-radius: 6px;
 }
