--- a/src/scss/_signup.scss
+++ b/src/scss/_signup.scss
@@ -1,13 +1,13 @@
 .signupContainer{
   margin-top: 10%;
-  width: 65%;
-  margin-left: 17.5%;
-  margin-right: 17.5%;
+  // width: 65%;
+  // margin-left: 17.5%;
+  // margin-right: 17.5%;
   text-align: center;
 }
 
 .inputContainer{
-  margin: 2%;
+  padding-bottom: 20px;
 }
 
 .signupTitle{
@@ -15,4 +15,16 @@
   font-size: 30px;
   text-align: center;
   margin-bottom: 4%;
+}
+
+.buttonContainer{
+  border-radius: 6px;
+}
+
+.formContainer{
+  width: 10%;
+  border-color: black;
+  border-style: solid;
+  margin-left: 45%;
+  margin-right: 45%;
 }
